# CBuilderScript

./: README.md  build_c_project.sh  c-forge
example/: CMakeLists.txt  build.sh  main.cpp
